--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
   "homepage": "https://github.com/AjeteKr/doqi#readme",
   "dependencies": {
     "@vitejs/plugin-react": "^5.0.4",
+    "country-flag-icons": "^1.5.21",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.0.0",
     "react-router-dom": "^7.9.4",
     "vite": "^7.1.9"
   },
