--- a/netlify.toml
+++ b/netlify.toml
@@ -31,13 +31,35 @@
   NODE_VERSION = "18"
 
 # Redirects and rewrites
-# Simplified admin handling to prevent path duplication
+
+# 404 page for common attack vectors
+[[redirects]]
+  from = "/*.php"
+  to = "/404.html"
+  status = 404
+
+[[redirects]]
+  from = "/*.asp"
+  to = "/404.html"
+  status = 404
+
+[[redirects]]
+  from = "/wp-admin/*"
+  to = "/404.html"
+  status = 404
+
+[[redirects]]
+  from = "/api/*"
+  to = "/404.html"
+  status = 404
+
+# Admin redirect
 [[redirects]]
   from = "/admin"
   to = "/admin/"
   status = 301
 
-# Catch-all for SPA routes (admin files will be served directly)
+# SPA fallback - this will NOT interfere with /admin/ because static files are served first
 [[redirects]]
   from = "/*"
   to = "/index.html"
