--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "sync-data": "node -e \"require('fs').copyFileSync('products.json', 'public/products.json')\""
   },
   "repository": {
     "type": "git",
