--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/AjeteKr/doqi#readme",
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@vitejs/plugin-react": "^5.0.4",
     "country-flag-icons": "^1.5.21",
     "i18next": "^25.6.0",
