--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "sync-data": "node -e \"require('fs').copyFileSync('products.json', 'public/products.json')\""
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
