--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@vitejs/plugin-react": "^5.0.4",
+    "axios": "^1.13.2",
     "country-flag-icons": "^1.5.21",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.9.5",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.14",
     "vite-plugin-pwa": "^1.0.3"
